--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -9,29 +9,13 @@
 
 <div class="container">
     <br>
-    <div align="left" style="border: 1px solid #000; padding:10px;">
+    <div align="left">
         <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
-    {% for post in all_posts %}
-    <h2>
-        {{ post.post_text }}
-    </h2>
-    {% if post.boasts %}
-        <h2>Boast</h2>
-    {% endif %}
-    {% if not post.boasts %}
-        <h2>Roast</h2>
-    {% endif %}
-    <h2>
-        <a href="/" class="btn btn-primary">UPVOTE</a>&nbsp;<a href="/" class="btn btn-primary">DOWNVOTE</a>
-    </h2>
-    <h3>
-        {{ votes }}
-    </h3>
-    <h3>
-        {{ post.submission_time }}
-    </h3>
-    <br>
-    <hr style="border-top: 3px solid #000;">
-    {% endfor %}
+    <h2>Create Boast or Roast</h2>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input class="btn btn-primary" type="submit" value ="Submit!">
+    </form> 
 </div>
