--- a/templates/boasts.html
+++ b/templates/boasts.html
@@ -12,16 +12,11 @@
     <div align="left" style="border: 1px solid #000; padding:10px;">
         <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
-    {% for post in all_posts %}
+    {% for post in boasts %}
     <h2>
         {{ post.post_text }}
     </h2>
-    {% if post.boasts %}
-        <h2>Boast</h2>
-    {% endif %}
-    {% if not post.boasts %}
-        <h2>Roast</h2>
-    {% endif %}
+    <h2>Boast</h2>
     <h2>
         <a href="/" class="btn btn-primary">UPVOTE</a>&nbsp;<a href="/" class="btn btn-primary">DOWNVOTE</a>
     </h2>
