--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -8,11 +8,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <div class="container">
+    <h1>Create Boast or Roast
     <br>
-    <div align="left">
+    <br>
+    <div align="left" style="border: 1px solid #000; padding:10px;">
         <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
-    <h2>Create Boast or Roast</h2>
+    <br>
+    <h2>Fill out info below</h2>
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
