--- a/templates/boasts.html
+++ b/templates/boasts.html
@@ -8,24 +8,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <div class="container">
+    <h1>All Boasts
+    <br>
     <br>
     <div align="left" style="border: 1px solid #000; padding:10px;">
         <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
+    <br>
     {% for post in boasts %}
     <h2>
         {{ post.post_text }}
     </h2>
-    <h2>Boast</h2>
+    <h3><em>Boast</em></h3>
     <h2>
-        <a href="/" class="btn btn-primary">UPVOTE</a>&nbsp;<a href="/" class="btn btn-primary">DOWNVOTE</a>
+        <a href="/upvote/{{ post.id }}" class="btn btn-primary">UPVOTE</a>&nbsp;{{ post.up_votes|add:post.down_votes}}&nbsp;<a href="/downvote/{{ post.id }}" class="btn btn-primary">DOWNVOTE</a>
     </h2>
-    <h3>
-        {{ votes }}
-    </h3>
-    <h3>
+    <h4>
         {{ post.submission_time }}
-    </h3>
+    </h4>
     <br>
     <hr style="border-top: 3px solid #000;">
     {% endfor %}
