--- a/templates/sorted.html
+++ b/templates/sorted.html
@@ -8,18 +8,30 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <div class="container">
+    <h1>Sorted by Votes
     <br>
-    <div align="left">
+    <br>
+    <div align="left" style="border: 1px solid #000; padding:10px;">
         <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
-    <h2>Sorted</h2>
-    <ul>
+    <br>
     {% for post in sorted %}
-    <li>
+    <h2>
         {{ post.post_text }}
-    </li>
+    </h2>
+    {% if post.boasts %}
+        <h3><em>Boast</em></h3>
+    {% endif %}
+    {% if not post.boasts %}
+        <h3><em>Roast</em></h3>
+    {% endif %}
+    <h2>
+        <a href="/upvote/{{ post.id }}" class="btn btn-primary">UPVOTE</a>&nbsp;{{ post.up_votes|add:post.down_votes}}&nbsp;<a href="/downvote/{{ post.id }}" class="btn btn-primary">DOWNVOTE</a>
+    </h2>
+    <h4>
+        {{ post.submission_time }}
+    </h4>
+    <br>
+    <hr style="border-top: 3px solid #000;">
     {% endfor %}
-    </ul>
-    <br>
-    <br>
 </div>
