Changed some variable names

--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -12,7 +12,7 @@
     <br>
     <br>
     <div align="left" style="border: 1px solid #000; padding:10px;">
-        <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sorted/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
+        <a href="/" class="btn btn-primary">Home</a>&nbsp;<a href="/sortedposts/" class="btn btn-primary">Sorted by Votes</a>&nbsp;<a href="/boasts/" class="btn btn-primary">Boasts</a>&nbsp;<a href="/roasts/" class="btn btn-primary">Roasts</a>&nbsp;<a href="/addpost/" class="btn btn-primary">Create Post</a>
     </div>
     <br>
     <h2>Fill out info below</h2>
